# octofer

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TESTING.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  package_update.yml  security.yml
.github/workflows/: publish-create.yaml  release-note.yaml  tests.yaml
examples/: basic.rs  clap.rs  complete_issue_comment_bot.rs  event_handlers.rs  github_client.rs  github_context_demo.rs  issue_comment_handler.rs  logging_test.rs  testing_framework.rs
examples/welcome-new/: Cargo.toml
examples/welcome-new/src/: main.rs
octofer/: Cargo.toml
octofer-cli/: Cargo.toml
octofer-cli/src/: main.rs
octofer-core/: Cargo.toml
octofer-core/src/: lib.rs
octofer-github/: Cargo.toml
octofer-github/src/: lib.rs
octofer-github/src/middlewares/: events.rs  hmac.rs  mod.rs
octofer-webhook/: Cargo.toml
octofer-webhook/src/: config.rs  handlers.rs  lib.rs
octofer/examples/: basic.rs  complete_issue_comment_bot.rs  explore_issue_comment.rs  github_client.rs  issue_comment_handler.rs
octofer/src/: lib.rs
src/: config.rs  core.rs  lib.rs
src/events/: checks.rs  deployments.rs  discussions.rs  installations.rs  issues.rs  misc.rs  mod.rs  projects.rs  prs.rs  releases.rs  repository.rs  teams.rs  workflows.rs
src/github/: auth.rs  client.rs  mod.rs  models.rs
src/github/middlewares/: events.rs  hmac.rs  mod.rs
src/testing/: assertions.rs  mock_client.rs  mock_events.rs  mod.rs  test_app.rs  test_context.rs
src/webhook/: handlers.rs  mod.rs  server.rs
tests/: testing_framework.rs
