[workspace]
resolver = "2"
members = [
    "octofer",
    "octofer-core", 
    "octofer-github",
    "octofer-webhook",
    "octofer-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abel Hristodor <abel@hristodor.dev>"]
license = "MIT"
repository = "https://github.com/AbelHristodor/octofer"
description = "A framework for building GitHub Apps in Rust"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"