[workspace]
resolver = "2"
members = [".", "octofer-cli"]

[package]
name = "octofer"
version = "0.1.0"
edition = "2021"
authors = ["Abel Hristodor <abel@hristodor.dev>"]
license = "MIT"
repository = "https://github.com/AbelHristodor/octofer"
description = "A framework for building GitHub Apps in Rust"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "github_client"
path = "examples/github_client.rs"



[[example]]
name = "github_context_demo"
path = "examples/github_context_demo.rs"

[[example]]
name = "logging_test"
path = "examples/logging_test.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# GitHub API
octocrab = "0.45"
jsonwebtoken = "9.0"

# Web server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP
url = "2.5"
