[package]
name = "octofer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for Octofer framework"

[[bin]]
name = "octofer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true