[package]
name = "octofer-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub API client for Octofer framework"

[dependencies]
octofer-core = { path = "../octofer-core" }
octocrab.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono = "0.4.42"
url = "2.5.7"
axum = { version = "0.8.4", features = ["tracing"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
