[package]
name = "octofer-webhook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Webhook handling for Octofer framework"

[dependencies]
octofer-core = { path = "../octofer-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum = { version = "0.8.4", features = ["tracing"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
