[package]
name = "octofer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main Octofer framework crate"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
octofer-core = { path = "../octofer-core" }
octofer-github = { path = "../octofer-github" }
octofer-webhook = { path = "../octofer-webhook" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true